@@ -6878,34 +6878,40 @@ INPUT, if non-nil, is a string sent to the process."
             (should-not (file-locked-p tmp-name1))
 
             ;; `kill-buffer' removes the lock.
-	    (lock-file tmp-name1)
-	    (should (eq (file-locked-p tmp-name1) t))
-            (with-temp-buffer
-              (set-visited-file-name tmp-name1)
-              (insert "foo")
-	      (should (buffer-modified-p))
-	      (cl-letf (((symbol-function #'read-from-minibuffer)
-                         (lambda (&rest _args) "yes")))
-                (kill-buffer)))
-	    (should-not (file-locked-p tmp-name1))
+	    ;; `kill-buffer--possibly-save' exists since Emacs 29.1.
+	    (when (fboundp 'kill-buffer--possibly-save)
+	      (lock-file tmp-name1)
+	      (should (eq (file-locked-p tmp-name1) t))
+              (with-temp-buffer
+		(set-visited-file-name tmp-name1)
+		(insert "foo")
+		(should (buffer-modified-p))
+		;; Modifying `read-from-minibuffer' doesn't work on MS Windows.
+		(cl-letf (((symbol-function #'kill-buffer--possibly-save)
+			   #'always))
+                  (kill-buffer)))
+	      (should-not (file-locked-p tmp-name1)))
 
             ;; `kill-buffer' should not remove the lock when the
             ;; connection is broken.  See Bug#61663.
-	    (lock-file tmp-name1)
-	    (should (eq (file-locked-p tmp-name1) t))
-            (with-temp-buffer
-              (set-visited-file-name tmp-name1)
-              (insert "foo")
-	      (should (buffer-modified-p))
-	      (tramp-cleanup-connection
-	       tramp-test-vec 'keep-debug 'keep-password)
-	      (cl-letf (((symbol-function #'read-from-minibuffer)
-                         (lambda (&rest _args) "yes")))
-                (kill-buffer)))
-	    ;; A new connection changes process id, and also the
-	    ;; lock file contents.  But it still exists.
-	    (tramp-cleanup-connection tramp-test-vec 'keep-debug 'keep-password)
-	    (should (stringp (file-locked-p tmp-name1)))
+	    ;; `kill-buffer--possibly-save' exists since Emacs 29.1.
+	    (when (fboundp 'kill-buffer--possibly-save)
+	      (lock-file tmp-name1)
+	      (should (eq (file-locked-p tmp-name1) t))
+              (with-temp-buffer
+		(set-visited-file-name tmp-name1)
+		(insert "foo")
+		(should (buffer-modified-p))
+		(tramp-cleanup-connection
+		 tramp-test-vec 'keep-debug 'keep-password)
+		;; Modifying `read-from-minibuffer' doesn't work on MS Windows.
+		(cl-letf (((symbol-function #'kill-buffer--possibly-save)
+			   #'always))
+                  (kill-buffer)))
+	      ;; A new connection changes process id, and also the
+	      ;; lock file contents.  But it still exists.
+	      (tramp-cleanup-connection tramp-test-vec 'keep-debug 'keep-password)
+	      (should (stringp (file-locked-p tmp-name1))))
 
 	    ;; When `remote-file-name-inhibit-locks' is set, nothing happens.
 	    (tramp-cleanup-connection tramp-test-vec 'keep-debug 'keep-password)
@@ -6928,35 +6934,43 @@ INPUT, if non-nil, is a string sent to the process."
 
 	    ;; Steal the file lock.
 	    (tramp-cleanup-connection tramp-test-vec 'keep-debug 'keep-password)
-	    (cl-letf (((symbol-function #'read-char) (lambda (&rest _args) ?s)))
+	    ;; Modifying `read-char' doesn't work on MS Windows.
+	    (cl-letf (((symbol-function #'ask-user-about-lock) #'always))
 	      (lock-file tmp-name1))
 	    (should (eq (file-locked-p tmp-name1) t))
 
 	    ;; Ignore the file lock.
 	    (tramp-cleanup-connection tramp-test-vec 'keep-debug 'keep-password)
-	    (cl-letf (((symbol-function #'read-char) (lambda (&rest _args) ?p)))
+	    ;; Modifying `read-char' doesn't work on MS Windows.
+	    (cl-letf (((symbol-function #'ask-user-about-lock) #'ignore))
 	      (lock-file tmp-name1))
 	    (should (stringp (file-locked-p tmp-name1)))
 
-	    ;; Quit the file lock machinery.
-	    (tramp-cleanup-connection tramp-test-vec 'keep-debug 'keep-password)
-	    (cl-letf (((symbol-function #'read-char) (lambda (&rest _args) ?q)))
-	      (should-error
-	       (lock-file tmp-name1)
-	       :type 'file-locked)
-	      ;; The same for `write-region'.
-	      (should-error
-	       (write-region "foo" nil tmp-name1)
-	       :type 'file-locked)
-	      (should-error
-	       (write-region "foo" nil tmp-name1 nil nil tmp-name1)
-               :type 'file-locked)
-	      ;; The same for `set-visited-file-name'.
-              (with-temp-buffer
-	        (should-error
-                 (set-visited-file-name tmp-name1)
-		 :type 'file-locked)))
+	    ;; Quit the file lock machinery.  There are problems with
+	    ;; "sftp" and "podman", so we test on Emacs 29.1 only.
+	    (when (tramp--test-emacs29-p )
+	      (tramp-cleanup-connection tramp-test-vec 'keep-debug 'keep-password)
+	      ;; Modifying `read-char' doesn't work on MS Windows.
+	      (cl-letf (((symbol-function #'ask-user-about-lock)
+			 (lambda (&rest args)
+			   (signal 'file-locked args))))
+		(should-error
+		 (lock-file tmp-name1)
+		 :type 'file-locked)
+		;; The same for `write-region'.
+		(should-error
+		 (write-region "foo" nil tmp-name1)
+		 :type 'file-locked)
+		(should-error
+		 (write-region "foo" nil tmp-name1 nil nil tmp-name1)
+		 :type 'file-locked)
+		;; The same for `set-visited-file-name'.
+		(with-temp-buffer
+	          (should-error
+                   (set-visited-file-name tmp-name1)
+		   :type 'file-locked))))
 	    (should (stringp (file-locked-p tmp-name1))))
+>>>>>>> cb355827 (* tramp-tests.el (tramp-test39-make-lock-file-name): Adapt test.)
 
 	;; Cleanup.
 	(ignore-errors (delete-file tmp-name1))
@@ -7647,7 +7661,7 @@ This requires restrictions of file name syntax."
        ;; to U+1FFFF).
        "🌈🍒👋")
 
-      (when (tramp--test-expensive-test-p)
+      (when (and (tramp--test-expensive-test-p) (not (tramp--test-windows-nt-p)))
 	(delete-dups
 	 (mapcar
 	  ;; Use all available language specific snippets.
