@@ -1,3 +1,8 @@
+2024-12-29  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-tests.el (tramp-test39-make-lock-file-name): Adapt test.
+	(tramp-test42-utf8): Do not run expensive tests on MS Windows.
+
 2024-12-03  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-tests.el (ert-batch-backtrace-right-margin): Set it to nil.
